# Enlisted

./: .editorconfig  .gitattributes  .gitignore  .output.txt  ADR-004-IMPLEMENTATION-COMPLETE.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Directory.Build.props  Enlisted.csproj  Enlisted.csproj.bak  Enlisted.sln  Enlisted.sln.DotSettings  Enlisted.sln.bak  Enlisted_Blueprint.csproj  Enlisted_Blueprint.sln  GITHUB_UPLOAD_COMPLETE.md  LICENSE  MIGRATION_COMPLETE.md  README.md  README_BLUEPRINT.md  ROADMAP.md  Settings.cs  SubModule.cs  SubModule.xml  TESTING_ATTACHEDTO.md  UpgradeLog.htm  UpgradeLog2.htm  UpgradeLog3.htm  UpgradeLog4.htm  WARP.md  WorkshopUpdate.xml  apply_all_fixes.ps1  build_errors.txt  build_output.txt  extract_issues.py  find_any_article_baseline.py  find_articles_main.py  fix_bulletin_errors.txt  (+11 more)
Tools/CrewAI/: .env.example  .gitignore  CREWAI.md  IMPLEMENTATION-SUMMARY.md  INTEGRATION_CHECKLIST.md  README.md  TESTING-GUIDE.md  TESTING.md  WARP.md  database_schema.sql  enlisted_knowledge.db  pyproject.toml  reset-memory.ps1  run-crew.ps1  setup_database.ps1  test_all.py  test_cache_tracking.py  test_config.py  test_escalation.py  test_flows.ps1  test_hierarchical.py  test_implementation_v2.py  test_memory.py  test_pydantic_fixer.py  test_pydantic_output.py  test_recommendations_format.py  update_after_patch.ps1
Tools/CrewAI/database/: .gitignore  README.md  enlisted_knowledge.db  enlisted_knowledge.db-journal  schema.sql  setup.ps1
Tools/CrewAI/docs/: ARCHITECTURE-RECOMMENDATION.md  CREWAI.md  MIGRATION_HIERARCHICAL.md  README.md  (+2 more)
(+1129 files in other folders)
